# rabbit-ear-app

./: .eslintrc.cjs  .eslintrc.json  .gitignore  .prettierignore  .prettierrc  contributions.md  dev-app-update.yml  dev.md  electron-builder.yml  electron.vite.config.ts  eslint.config.js  index.html  package-lock.json  package.json  readme.md  svelte.config.js  svelte.config.mjs  todo.md  tsconfig.json  tsconfig.node.json  vite.config.js
.zed/: settings.json
resources/: crane.fold
src/: interface.js  main.js  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: EditorContext.svelte.ts  FileController.svelte.ts  FileDocument.svelte.ts  FileManager.svelte.ts  FileModel.svelte.ts  HistoryManager.svelte.ts  KeyboardManager.svelte.ts  LocalStorageItem.svelte.ts  LocalStorageRegistry.svelte.ts  Localization.svelte.ts  SceneState.svelte.ts  Settings.svelte.ts  Simulator.svelte.ts  ViewportState.svelte.ts  boot.svelte.ts  context.svelte.ts  keys.js  t.ts
src/assets/: base1.fold  base2.fold  windmill.fold
src/commands/: AffineScaleCommand.ts  AffineTranslateCommand.ts  AppendFrameCommand.ts  BackupCommand.ts  Command.ts  InsertTextCommand.ts  ModifyGraphCommand.ts  ModifyVerticesCoordsCommand.ts  SelectRectCommand.ts  TranslateCommand.ts
src/components/: App.svelte  Canvases.svelte  Dialogs.svelte  DragAndDrop.svelte  FileManager.svelte  Footer.svelte  Frames.svelte  GraphManager.svelte  Header.svelte  Kernel.svelte  Main.svelte  Panels.svelte  Style.svelte  (+2 more)
tests/: arrays.test.js  context.test.ts  first.test.ts  general.matrix.test.ts  kernel.format.test.js  openfile.test.ts  shapes.test.ts
(+1347 files in other folders)
