[package]
name = "rabbit_ear"
version = "0.0.0"
description = "origami design tool"
authors = ["Kraft"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "path-all", "dialog-ask", "window-all", "fs-rename-file", "fs-remove-file", "fs-copy-file", "fs-remove-dir", "fs-read-file", "fs-read-dir", "fs-exists", "fs-create-dir", "fs-write-file", "dialog-save", "dialog-message", "dialog-open", "dialog-confirm", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
